Enhance HTML structure and styles for better readability and consistency

--- a/Ejercicio1.html
+++ b/Ejercicio1.html
@@ -8,21 +8,21 @@
 </head>
 <body>
 <header>
-    <h1>Ejercicio 1</h1>
+    <h1 class="texto-azulHielo" style="font-size: 36px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Ejercicio 1</h1>
     <link rel="stylesheet" href="style/estilos.css">
 </header>
 <main>
     <section>
-        <h2 class = "texto-grisClaro">Articulo 1</h2>
-        <p class="texto-grisClaro">Esto es un texto</p>
+        <h2 class = "texto-grisClaro" style="font-size: 24px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Articulo 1</h2>
+        <p class = "texto-grisClaro" style="font-size: 24px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Esto es un texto</p>
     </section>
     <section>
-        <h2 class = "texto-dorado">Articulo 2</h2>
-        <p class="texto-dorado">Esto es un texto</p>
+        <h2 class = "texto-dorado" style="font-size: 24px; font-family: 'Times New Roman', Times, serif;">Articulo 2</h2>
+        <p class="texto-dorado" style="font-size: 24px; font-family: 'Times New Roman', Times, serif;">Esto es un texto</p>
     </section>
     <section>
-        <h2 class = "texto-azul">Articulo 3</h2>
-        <p class="texto-azul">Esto es un texto</p>
+        <h2 class = "texto-azul" style="font-size: 24px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Articulo 3</h2>
+        <p class="texto-azul" style="font-size: 24px; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Esto es un texto</p>
     </section>
 </main>
 </body>
